# rust-agentic

./: .gitignore  Cargo.toml  README.md
examples/: client-c01-simple.rs  client-c02-call-tool.rs  client-c03-http.rs  client-c04-sampling.rs
src/: lib.rs  types.rs
src/mcp/: autocomplete.rs  base.rs  cancel.rs  client_messages.rs  common.rs  content.rs  error.rs  init.rs  lifecycle.rs  logging.rs  mod.rs  pagination.rs  ping.rs  progress.rs  prompts.rs  resources.rs  roots.rs  sampling.rs  server_messages.rs  support.rs  tools.rs  traits.rs  wrappers.rs
src/mcp/capabilities/: client_capabilities.rs  mod.rs  server_capabilities.rs
src/mcp/client/: client_impl.rs  coms_trx.rs  error.rs  into_client_transport.rs  mod.rs  sampling_handler.rs  server_io_trx.rs
src/mcp/client/transport/: client_transport.rs  comm_trx.rs  error.rs  mod.rs  stdio_config.rs  stdio_transport.rs  support.rs
src/mcp/client/transport/http/: http_config.rs  http_transport.rs  mod.rs
src/mcp/client/transport/stdio/: mod.rs  stdio_transport.rs
src/mcp/common/: base.rs  completion.rs  logging.rs  meta.rs  mod.rs  progress.rs
src/mcp/messages/: mcp_error.rs  mcp_message.rs  mcp_notification.rs  mcp_request.rs  mcp_response.rs  mod.rs
src/mcp/notifications/: data_change.rs  lifecycle.rs  mod.rs  utility.rs
src/mcp/prompts/: notifications.rs  requests.rs  types.rs
src/mcp/requests/: common.rs  completion.rs  lifecycle.rs  mod.rs  prompt_types.rs  prompts.rs  resource_types.rs  resources.rs  sampling.rs  tool_types.rs  tools.rs  utility.rs
src/mcp/resources/: mod.rs  notifications.rs  requests.rs  types.rs
src/mcp/sampling/: mod.rs  requests.rs  types.rs
src/mcp/tools/: notifications.rs  requests.rs  types.rs
src/mcp/transport/: error.rs  mod.rs  stdio_transport.rs  transport_controller.rs
src/rpc/: json_rpc.rs  mod.rs
tests/: tests-c-stdio-lifecycle.rs  tests-c-stdio-sampling.rs  tests-c-stdio-tools.rs
tests/support/: mod.rs
