[package]
name = "agentic"
version = "0.0.4"
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
description = "Support library for building Agentic MCP and Agent2Agent based systems"
keywords = [
	"MCP",
	"agent",
	"openai",
	"Agent2Agent",
	"ollama"
]
homepage = "https://github.com/jeremychone/rust-agentic"
repository = "https://github.com/jeremychone/rust-agentic"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# -- Tracing
tracing = { version = "0.1", features = ["default"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros", "base64"] }
# -- RPC
rpc-router = "=0.2.0-alpha.1" 
# -- Web
reqwest = { version = "0.12.19", features = ["stream"]}
eventsource-stream = "=0.2.3"
# -- Event
flume = "0.11.1"
# -- Others
derive_more = { version = "2", features = ["from", "display"] }
dashmap = "6.1.0"
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
tracing-subscriber = "0.3.19"
value-ext = "0.1.2"

